Refactor all level converter code